# Portfolio

./: LICENSE  Portfolio_README.md  README.md
Ecommerce_Analysis/: .gitignore  README (1).md  README.md  requirements.txt
Ecommerce_Analysis/data/processed/: df_model.parquet  products  products.csv  sellers.csv
Ecommerce_Analysis/docs/: mkdocs.yml
Ecommerce_Analysis/docs/docs/: index.md
Ecommerce_Analysis/notebooks/: data_loading.ipynb  data_preparation.ipynb  exploratory_data_analysis.ipynb  model.ipynb
Ecommerce_Analysis/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Ecommerce_Analysis/notebooks/catboost_info/learn/: events.out.tfevents
Ecommerce_Analysis/scripts/: data_loading.py  data_preparation.py
Ecommerce_Analysis/sql_queries/: primary_keys.sql
Olist_Ecommerce_Analysis/scripts/: limpeza_tratamento.ipynb  limpeza_tratamento.py
Olist_Ecommerce_Analysis/sql_queries/scripts/: 10_ultimos_cancelamentos.sql  create_tables.sql
Portfolio/: LICENSE  Makefile  README.md  pyproject.toml
Portfolio/scripts/: data_loading.py
