[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "olist_ecommerce_analysis"
version = "0.0.1"
description = "O projeto \u00e9 sobre dados reais de um marketplace brasileiro, incluindo pedidos, pre\u00e7os, categoria de produtos, avalia\u00e7\u00f5es e prazos de entrega. O objetivo \u00e9 realizar tratamentos dos dados, An\u00e1lise Explorat\u00f3ria e aplicar um modelo Machine Learning."
authors = [
  { name = "Henrique Augusto de Oliveira Ferreira" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.11.3"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["olist_ecommerce_analysis"]
force_sort_within_sections = true


